* XACMLCORE-228 migrate java time * XACMLCORE-228 Upgrade to Java version 8
* Fix some PMD issues
* Set some more loggers to static
* add throwable to debug loggers
* Fix styling
* Add javadoc
* Replace deprecated code usage
* update build to java 8
* Initial Bitbucket Pipelines configuration
* configure maven 3.8.2-openjdk-8
* Adding surefire report caching

Approved-by: Florian Huonder